--- a/react_js_base_code-main G7/package.json
+++ b/react_js_base_code-main G7/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactbasecode",
+  "name": "npm",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -39,5 +39,9 @@
     "typescript": "^5.7.3",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
