--- a/react_js_base_code-main G7/package.json
+++ b/react_js_base_code-main G7/package.json
@@ -22,11 +22,14 @@
     "bcryptjs": "^3.0.2",
     "formik": "^2.4.6",
     "fullcalendar": "^6.1.17",
-    "react": "^19.0.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.510.0",
+    "react": "^19.1.0",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-router": "^7.1.5",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
