--- a/react_js_base_code-main G7/package.json
+++ b/react_js_base_code-main G7/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
