--- a/react_js_base_code-main G7/package.json
+++ b/react_js_base_code-main G7/package.json
@@ -30,7 +30,8 @@
     "react-router": "^7.1.5",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
